refactor: remove Density/phase values on canvas

--- a/QHOs/model.css
+++ b/QHOs/model.css
@@ -63,7 +63,7 @@ h1 {
 }
 
 .textContainer {
-    text-align: center;
+    text-align: left;
     -webkit-text-size-adjust: 100%;
     margin-top: 4px;
 }
